<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/listen"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/speak"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:icon="@android:drawable/ic_lock_silent_mode_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/share"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/share"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:icon="?attr/actionModeShareDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/listen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peopleLabel" />

    <EditText
        android:id="@+id/peopleCount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/peopleCount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/peopleLabel"
        app:layout_constraintTop_toBottomOf="@+id/money"
        android:autofillHints="" />

    <EditText
        android:id="@+id/money"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/moneyAmount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/peopleCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/moneyLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/peopleLabel"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:backgroundTintMode="src_in"
        android:text="@string/people"
        android:textAlignment="center"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/peopleCount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyLabel" />

    <TextView
        android:id="@+id/moneyLabel"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:backgroundTintMode="src_in"
        android:text="@string/money"
        android:textAlignment="center"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/peopleLabel"
        app:layout_constraintEnd_toStartOf="@+id/peopleCount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>